--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "hostcia\\highcharts": "src/highcharts"
